fixed app.js component padding and added password visibility

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
-  height: 100%;
+  /* height: 100%; */
   /* // */
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 .App-logo {
